docs: documentation for list opportunities
